--- a/graduatetracer/tracer/templates/tracer/admin/pending.html
+++ b/graduatetracer/tracer/templates/tracer/admin/pending.html
@@ -1,7 +1,13 @@
-{% extends 'tracer/admin/template.html' %}
-{% block content %}
+{%  extends 'tracer/admin/template.html' %}
+{% load static %}
+{% load humanize %}
 
-<style media="screen">
+{% block content %}
+<!-- Datatables -->
+
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.4/css/jquery.dataTables.css">
+
+  <style media="screen">
     .none{
       display:none;
     }
@@ -13,10 +19,6 @@
       z-index: 2;
     }
 
-    .dataTables_filter{
-      display: none;
-    }
-
     .dropdown-filter{
       top: 33px !important;
       position: relative;
@@ -26,6 +28,13 @@
     .dataTables_length{
       padding-bottom: 10px;
     }
+
+    label {
+      display: inline-block;
+      margin-bottom: 0.5rem;
+      margin-top: 1.5rem;
+    }
+
     .th-w-20{
       width:20% !important;
     }
@@ -33,61 +42,102 @@
       width:10% !important;
     }
   </style>
-<!-- Begin Page Content -->
-<div class="container-fluid">
-    <!-- DataTales Example -->
-    <div class="card shadow mb-4">
-        <div class="card-header py-3 bg-c-lite-green">
-            <h6 class="m-0 font-weight-bold text-black">PENDING ACCOUNTS</h6>
-        </div>
-        <div class="card-body">
-            <div class="table-responsive">
-                <table id="dataTables_filter" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
-                    <thead>
-                        <tr>
-                            <th class="th-w-20" style="white-space: nowrap">ID Number</th>
-                            <th class="th-w-20" style="white-space: nowrap">Name</th>
-                            <th class="th-w-20" style="white-space: nowrap">Email</th>
-                            <th class="th-w-20" style="white-space: nowrap">School</th>
-                            <th class="th-w-20" style="white-space: nowrap">Course</th>
-                            <th class="th-w-20" style="white-space: nowrap">Date Graduated</th>
-                            <th class="th-w-20" style="white-space: nowrap">Action</th>
-
-                        </tr>
-                    </thead>
-
-                    <tbody>
-                      {% for gradAcct in gradAccts %}
-                          {% if gradAcct.pending %}
-                            {% if gradAcct.school == request.user.school %}
-                              <tr>
-                                  <td class="th-w-20" style="white-space: nowrap">{{gradAcct.IDNum}}</td>
-                                  <td class="th-w-20" style="white-space: nowrap">{{gradAcct.first_name}} {{gradAcct.middle_name}} {{gradAcct.last_name}}</td>
-                                  <td class="th-w-20" style="white-space: nowrap">{{gradAcct.email}}</td>
-                                  <td class="th-w-20" style="white-space: nowrap">{{gradAcct.school}}</td>
-                                  <td class="th-w-20" style="white-space: nowrap">{{gradAcct.course_type}}</td>
-                                  <td class="th-w-20" style="white-space: nowrap">{{gradAcct.date_graduated}}</td>
-                                  <td class="text-center">
-                                      <div class="pl-2 pr-2 pb-2 pt-1">
-                                          <a class="btn btn-success" href="{% url 'userinformation' gradAcct.id %}"><i class="fas fa-eye"></i></a>
-                                      </div>
-                                  </td>
-                              </tr>
-                              {% endif %}
-                          {% endif %}
-                        {% endfor %}
-                    </tbody>
-                </table>
-
-            </div>
-        </div>
-    </div>
-
-
+  <!-- End -->
+  <div class="card-header py-3 bg-c-lite-green">
+      <h6 class="m-0 font-weight-bold text-black">PENDING ACCOUNTS</h6>
+  </div>
+<div class="container-fluid bg-white pr-4 pl-4 pb-2">
+    <table id="jobs" class="display table table-bordered table-responsive w-100">
+        <thead>
+            <tr>
+              <th class="th-w-20" style="white-space: nowrap">ID Number</th>
+              <th class="th-w-20" style="white-space: nowrap">Name</th>
+              <th class="th-w-20" style="white-space: nowrap">Email</th>
+              <th class="th-w-20" style="white-space: nowrap">School</th>
+              <th class="th-w-20" style="white-space: nowrap">Employment Status</th>
+              <th class="th-w-20" style="white-space: nowrap">Course</th>
+              <th class="th-w-20" style="white-space: nowrap">Date Graduated</th>
+              <th class="th-w-20" style="white-space: nowrap">Action</th>
+            </tr>
+        </thead>
+        <tbody>
+          {% for gradAcct in gradAccts %}
+              {% if gradAcct.pending %}
+                {% if gradAcct.school == request.user.school %}
+            <tr>
+              <td class="th-w-20" style="white-space: nowrap">
+                  {{gradAcct.IDNum}}
+              </td>
+                <td class="th-w-20" style="white-space: nowrap">
+                  {{gradAcct.first_name}} {{gradAcct.middle_name}} {{gradAcct.last_name}}
+                </td>
+                <td class="th-w-20" style="white-space: nowrap">
+                  {{gradAcct.email}}
+                </td>
+                <td class="th-w-20" style="white-space: nowrap">
+                  {{gradAcct.school}}
+                </td>
+                <td class="th-w-20" style="white-space: nowrap">
+                    {{gradAcct.employment_status}}
+                </td>
+                <td class="th-w-20" style="white-space: nowrap">
+                    {{gradAcct.course_type}}
+                </td>
+                <td class="th-w-20" style="white-space: nowrap">
+                  {{gradAcct.date_graduated}}
+                </td>
+                <td class="text-center">
+                    <div class="pl-2 pr-2 pb-2 pt-1">
+                        <a class="btn btn-success" href="{% url 'userinformation' gradAcct.id %}"><i class="fas fa-eye"></i></a>
+                    </div>
+                </td>
+            </tr>
+            {% endif %}
+        {% endif %}
+      {% endfor %}
+      </tbody>
+  </table>
 </div>
 
-<!-- /.container-fluid -->
 
+<!-- Datatables -->
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.js"></script>
 
+<!-- Sweet Alert -->
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<script>
+  {% for message in messages %}
+  Swal.fire({
+    position: 'center',
+    icon: 'success',
+    title: '{{message}}',
+    showConfirmButton: false,
+    timer: 3000
+  })
+  {% endfor %}
+</script>
+
+<script>
+  $(document).ready(function() {
+    var table = $('#jobs').DataTable( {
+      stateSave: false,
+      "ordering": true,
+      "columnDefs" : [{"targets":3, "type":"date-eu"}],
+      order: [],
+
+    } );
+    $('#query0').on('change', function(){
+       table.columns(0).search(this.value).draw();
+    });
+    $('#query1').on('change', function(){
+       table.columns(4).search(this.value).draw();
+    });
+    $('#query2').on('change', function(){
+       table.columns(5).search(this.value).draw();
+    });
+} );
+</script>
 
 {% endblock %}
