--- a/graduatetracer/tracer/templates/tracer/user/sidebar.html
+++ b/graduatetracer/tracer/templates/tracer/user/sidebar.html
@@ -1,5 +1,7 @@
 {% load static %}
-<ul class="navbar-nav bg-c-lite-green sidebar sidebar-dark accordion" id="accordionSidebar">
+
+<div class="sidebar">
+<ul style="position: sticky; z-index: 1; top: 0;" class="navbar-nav bg-c-lite-green sidebar sidebar-dark accordion" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="">
@@ -108,3 +110,4 @@
 
 
 </ul>
+</div>
