--- a/graduatetracer/tracer/templates/tracer/admin/topbar.html
+++ b/graduatetracer/tracer/templates/tracer/admin/topbar.html
@@ -5,15 +5,16 @@
     font-size:90%;
     top: 22px;
   }
-  .topbar{
-    position:sticky;
-  }
+ 
+  
+
 </style>
 <!-- Topbar -->
 <form class="" action="" method="GET">
-  <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+  <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow" style="position:fixed; width:90%!important; z-index:1;">
 
       <!-- Sidebar Toggle (Topbar) -->
+
       <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
           <i class="fa fa-bars"></i>
       </button>
