--- a/graduatetracer/tracer/templates/tracer/admin/template.html
+++ b/graduatetracer/tracer/templates/tracer/admin/template.html
@@ -36,13 +36,13 @@
     <!-- Content Wrapper -->
     <div id="content-wrapper" class="d-flex flex-column">
       <!-- Main Content -->
-      <div id="content">
+      <div id="content" >
         <!-- Topbar -->
         {% include 'tracer/admin/topbar.html' %}
   				<!-- End of Topbar -->
 
           <!-- Begin Page Content -->
-          <div class="container-fluid">
+          <div class="container-fluid " style="margin-top:100px;">
             {% block content %}
 
 
@@ -106,6 +106,11 @@
   	  	$(".se-pre-con").fadeOut("slow");;
   	  });
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+   <script type="text/javascript">
+    
+   </script>
+  
  
 </body>
 
