--- a/graduatetracer/tracer/templates/tracer/adminreal/user.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/user.html
@@ -4,6 +4,8 @@
 {% load widget_tweaks %}
 
 {% block content %}
+
+
   <div class="container-fluid">
     <div class="card shadow-sm mb-4">
       <div class="card-body bg-c-lite-green">
@@ -15,7 +17,7 @@
               </div>
             </div>
             <div class="col-lg-1">
-              <button class="btn bg-gradient-info text-white shadow-lg" type="submit" name="button">Search</button>
+              <button class="btn bg-white text-white shadow-lg" type="submit" name="button">Search</button>
             </div>
           </div>
         </form>
