--- a/graduatetracer/tracer/templates/tracer/firstInterface/landingPage.html
+++ b/graduatetracer/tracer/templates/tracer/firstInterface/landingPage.html
@@ -33,7 +33,7 @@
             </div>
             <h1 class="responsive-font-example">WELCOME KA-ALMA MATER!!!</h1>
             <i class="fas fa-duotone fa-user-graduate"></i>
-            <h3 class="mb-5 "><em>Cebu Technological University-Ginatilan Campus </em></h3>
+            <h3 class="mb-5 "><em>Cebu Technological University</em></h3>
             <h3 class="mb-5 ">Graduate Tracer System </h3>
 
             <a class="btn btn-primary btn-user btn-block" href="{% url 'login' %}"> Let's Start</a>
