--- a/graduatetracer/tracer/templates/tracer/adminreal/sidebar.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/sidebar.html
@@ -1,98 +1,99 @@
 <!-- Sidebar -->
 {% load static %}
+<div class="sidebar">
+  <ul style="position:sticky; z-index:1; top:0;"class="navbar-nav bg-gradient-info sidebar sidebar-dark accordion " id="accordionSidebar">
 
-<ul class="navbar-nav bg-gradient-info sidebar sidebar-dark accordion " id="accordionSidebar">
+      <!-- Sidebar - Brand -->
+      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'admindash' %}">
+          <div class="sidebar-brand-icon rotate-n-15">
+              <i class="fas fa-user-graduate"></i>
+          </div>
+          <div class="sidebar-brand-text mx-3">Admin</div>
+      </a>
 
-    <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center justify-content-center sticky" href="{% url 'admindash' %}">
-        <div class="sidebar-brand-icon rotate-n-15">
-            <i class="fas fa-user-graduate"></i>
-        </div>
-        <div class="sidebar-brand-text mx-3">Admin</div>
-    </a>
+      <!-- Divider -->
+      <hr class="sidebar-divider my-0">
 
-    <!-- Divider -->
-    <hr class="sidebar-divider my-0 sticky">
+      <li class="nav-item active">
+          <a class="nav-link" href="{% url 'admindash' %}">
+            {% if user.profile_picture %}
+              <img class="img-fluid img-profile rounded-circle" src="{{request.user.profile_picture.url}}">
+            {% else %}
+              <img class="img-fluid img-profile rounded-circle" src="{% static 'img/default_profile_2.png'  %}">
+            {% endif %}
+              <span>Dashboard</span></a>
+      </li>
 
-    <li class="nav-item active sticky">
-        <a class="nav-link" href="{% url 'admindash' %}">
-          {% if user.profile_picture %}
-            <img class="img-fluid img-profile rounded-circle" src="{{request.user.profile_picture.url}}">
-          {% else %}
-            <img class="img-fluid img-profile rounded-circle" src="{% static 'img/default_profile_2.png'  %}">
-          {% endif %}
-            <span>Dashboard</span></a>
-    </li>
+      <!-- Divider -->
+      <hr class="sidebar-divider">
 
-    <!-- Divider -->
-    <hr class="sidebar-divider sticky">
+      <!-- Heading -->
+      <div class="sidebar-heading">
+          Interface
+      </div>
 
-    <!-- Heading -->
-    <div class="sidebar-heading sticky">
-        Interface
-    </div>
+      <!-- Nav Item - Charts -->
+      <li class="nav-item">
+          <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+              <i class="fas fa-users"></i>
+              <span>Admin Management</span>
+          </a>
+          <div id="collapseThree" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+              <div class="bg-white py-2 collapse-inner rounded">
+                  <a class="collapse-item" href="{% url 'create_user_management' %}">Create Admin</a>
+                  <a class="collapse-item" href="{% url 'display_user_management' %}">Display Admin</a>
+              </div>
+          </div>
+      </li>
 
-    <!-- Nav Item - Charts -->
-    <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-            <i class="fas fa-users"></i>
-            <span>Admin Management</span>
-        </a>
-        <div id="collapseThree" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-            <div class="bg-white py-2 collapse-inner rounded">
-                <a class="collapse-item" href="{% url 'create_user_management' %}">Create Admin</a>
-                <a class="collapse-item" href="{% url 'display_user_management' %}">Display Admin</a>
-            </div>
-        </div>
-    </li>
+      <!-- Nav Item - Pages Collapse Menu -->
+      <li class="nav-item">
+          <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+              <i class="fas fa-poll"></i>
+              <span>Reports</span>
+          </a>
+          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+              <div class="bg-white py-2 collapse-inner rounded">
+                  <a class="collapse-item" href="{% url 'school_report' %}">School Reports</a>
 
-    <!-- Nav Item - Pages Collapse Menu -->
-    <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-            <i class="fas fa-poll"></i>
-            <span>Reports</span>
-        </a>
-        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-            <div class="bg-white py-2 collapse-inner rounded">
-                <a class="collapse-item" href="{% url 'school_report' %}">School Reports</a>
+              </div>
+          </div>
+      </li>
 
-            </div>
-        </div>
-    </li>
+      <li class="nav-item">
+          <a class="nav-link" href="{% url 'user' %}">
+              <i class="fas fa-users"></i>
+              <span>Graduates</span></a>
+      </li>
+      <!-- Divider -->
+      <hr class="sidebar-divider">
 
-    <li class="nav-item sticky">
-        <a class="nav-link" href="{% url 'user' %}">
-            <i class="fas fa-users"></i>
-            <span>Graduates</span></a>
-    </li>
-    <!-- Divider -->
-    <hr class="sidebar-divider sticky">
+      <!-- Heading -->
+      <!-- <div class="sidebar-heading">
+          Addons
+      </div> -->
+      <!-- Nav Item - Pages Collapse Menu -->
+      <!-- <li class="nav-item">
+          <a class="nav-link" href="{% url 'job_requests' %}">
+              <i class="fas fa-bullhorn"></i>
+              <span>Job Requests</span></a>
+      </li> -->
 
-    <!-- Heading -->
-    <!-- <div class="sidebar-heading sticky">
-        Addons
-    </div> -->
-    <!-- Nav Item - Pages Collapse Menu -->
-    <!-- <li class="nav-item sticky">
-        <a class="nav-link" href="{% url 'job_requests' %}">
-            <i class="fas fa-bullhorn"></i>
-            <span>Job Requests</span></a>
-    </li> -->
+      <!-- Nav Item - Charts -->
+      <!-- <li class="nav-item">
+          <a class="nav-link" href="{% url 'user' %}">
+              <i class="fas fa-users"></i>
+              <span>User Graduates</span></a>
+      </li> -->
 
-    <!-- Nav Item - Charts -->
-    <!-- <li class="nav-item sticky">
-        <a class="nav-link" href="{% url 'user' %}">
-            <i class="fas fa-users"></i>
-            <span>User Graduates</span></a>
-    </li> -->
+      <!-- Divider -->
+      <!-- <hr class="sidebar-divider d-none d-md-block"> -->
 
-    <!-- Divider -->
-    <!-- <hr class="sidebar-divider d-none d-md-block sticky"> -->
+      <!-- Sidebar Toggler (Sidebar) -->
+      <div class="text-center d-none d-md-inline">
+          <button class="rounded-circle border-0" id="sidebarToggle"></button>
+      </div>
 
-    <!-- Sidebar Toggler (Sidebar) -->
-    <div class="text-center d-none d-md-inline sticky">
-        <button class="rounded-circle border-0" id="sidebarToggle"></button>
-    </div>
-
-</ul>
-<!-- End of Sidebar -->
+  </ul>
+  <!-- End of Sidebar -->
+</div>
