--- a/graduatetracer/tracer/templates/tracer/adminreal/topbar.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/topbar.html
@@ -6,9 +6,13 @@
     top: 22px;
   }
 </style>
+
+
+
+
 <!-- Topbar -->
-<form class="" action="" method="GET">
-  <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+
+  <nav style="position:fixed; z-index:1; top:0; width:95%;" class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
       <!-- Sidebar Toggle (Topbar) -->
       <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
@@ -18,10 +22,10 @@
       <!-- Topbar Navbar -->
 
       <ul class="navbar-nav ml-auto">
-
         <div class="topbar-divider d-none d-sm-block text-dark"></div>
 
           <!-- Nav Item - User Information -->
+
           <li class="nav-item dropdown no-arrow">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -44,6 +48,7 @@
                   {% endif %}
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="{% url 'logout' %}">
+
                       <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i> Logout
                   </a>
               </div>
@@ -53,5 +58,9 @@
 
   </nav>
 
-</form>
+
+
+
+
+
   <!-- End of Topbar -->
