--- a/graduatetracer/tracer/templates/tracer/user/DisplayInfo.html
+++ b/graduatetracer/tracer/templates/tracer/user/DisplayInfo.html
@@ -3,7 +3,7 @@
 {% block content %}
 <link href="{% static 'css/Display.css' %}" rel="stylesheet">
   <div class="sec-title">
-   <div class="pg-sub-title">Home</div>
+   <div class="pg-sub-title">Alumni</div>
      <div class="pg-title">My Profile</div>
    </div>
 <div class="container">
